Fixed overflow issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -40,6 +40,7 @@ body, html, #root{
   padding: 0;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 
